--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,12 @@
 {
   "C_Cpp.errorSquiggles": "disabled",
   "files.associations": {
-    "cmath": "cpp"
+    "cmath": "cpp",
+    "deque": "cpp",
+    "string": "cpp",
+    "vector": "cpp",
+    "*.tcc": "cpp",
+    "unordered_map": "cpp",
+    "system_error": "cpp"
   }
 }
